# glthreshold

./: .clang-format  .gitignore
jni/: AdaptiveThresholdProcessor.cpp  AdaptiveThresholdProcessor.h  AlignmentPattern.cpp  AlignmentPattern.h  AlignmentPatternFinder.cpp  AlignmentPatternFinder.h  Android.mk  Application.mk  BinarizeProcessor.cpp  BinarizeProcessor.h  BinarizeProcessorCPU.cpp  BinarizeProcessorCPU.h  BitMatrixParser.cpp  BitMatrixParser.h  BitSource.cpp  BitSource.h  DataBlock.cpp  DataBlock.h  DataMask.cpp  DataMask.h  DecodedBitStreamParser.cpp  DecodedBitStreamParser.h  DecoderResult.cpp  DecoderResult.h  DefaultGridSampler.cpp  DefaultGridSampler.h  DilateNonZeroProcessor.cpp  DilateNonZeroProcessor.h  ErodeNonZeroProcessor.cpp  ErodeNonZeroProcessor.h  ErrorCorrectionLevel.cpp  ErrorCorrectionLevel.h  FinderPattern.cpp  FinderPattern.h  FinderPatternInfo.cpp  FinderPatternInfo.h  FormatInformation.cpp  FormatInformation.h  GL3Interfaces.h  GLCommon.cpp  (+42 more)
jni/libpng-1.2.51/: CMakeLists.txt  config.h.in  png.c  pngrutil.c  pngset.c
jni/nvImage/include/: nvImage.h
jni/nvImage/src/: nvImage.cpp  nvImageDDS.cpp  nvImagePng.cpp  rgbe.c
