CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )
FILE( GLOB SOURCES *.c )
INCLUDE(CheckFunctionExists)
INCLUDE(CheckIncludeFiles)
INCLUDE(CheckLibraryExists)

CHECK_INCLUDE_FILES(dlfcn.h HAVE_DLFCN_H)
CHECK_INCLUDE_FILES(inttypes.h 	HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES(malloc.h	HAVE_MALLOC_H)
CHECK_INCLUDE_FILES(memory.h    HAVE_MEMORY_H)
CHECK_INCLUDE_FILES(stdint.h    HAVE_STDINT_H)
CHECK_INCLUDE_FILES(stdlib.h    HAVE_STDLIB_H)
CHECK_INCLUDE_FILES(strings.h	HAVE_STRINGS_H)
CHECK_INCLUDE_FILES(string.h	HAVE_STRING_H)
CHECK_INCLUDE_FILES(sys/stat.h	HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES(sys/types.h	HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES(unistd.h	HAVE_UNISTD_H)
CHECK_FUNCTION_EXISTS(memset HAVE_MEMSET)
CHECK_FUNCTION_EXISTS(pow HAVE_POW)
CHECK_FUNCTION_EXISTS (sin HAVE_LIBM)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
ADD_DEFINITIONS(-DHAVE_CONFIG_H)

ADD_LIBRARY( libpng STATIC ${SOURCES})
TARGET_INCLUDE_DIRECTORIES (libpng PUBLIC . ${CMAKE_CURRENT_BINARY_DIR} )
TARGET_LINK_LIBRARIES( libpng PUBLIC libz )
